<resources>
    <string name="app_name">MySmartVoiceRecorder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_empty">EmptyActivity</string>
    <string name="newname">Enter new name:</string>
    <string name="rename">rename</string>
    <string name="cancel">Cancel</string>
    <string name="deleteQ">Delete?</string>
    <string name="delete">delete</string>
    <string name="created">Created</string>
    <string name="changed">Last Modified</string>
    <string name="duration">Duration</string>
    <string name="ok">Ok</string>
    <string-array name="onLongClickSegment">
        <item>Append new Record after</item>
        <item>Rename</item>
        <item>Transcribe again</item>
        <item>Details</item>
        <item>Delete</item>
    </string-array>
    <string-array name="onLongClickRecord">
        <item>Rename</item>
        <item>Details</item>
        <item>Delete</item>
    </string-array>

    <string-array name="onLongClickRecordElement">
        <item>Append new Record after</item>
        <item>Rename</item>
        <item>Details</item>
        <item>Delete</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    >
    <string name="pref_header_transcript">Transcript</string>
    <string name="dateInsteadOfTranscript">Show date/duration, not Transcript</string>
    <string name="chooseTranscripeService">Choose Transcription Service</string>
    <string-array name="pref_transcripe_services_tiles">
        <item>No Transcription</item>
        <item>Google</item>
        <item>Nuance</item>
    </string-array>
    <string-array name="pref_transcripe_services_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_header_segmentation">Segmentation</string>
    <string name="setTreeshold">New Segment threshold(DZB) by undertone</string>
    <string-array name="pref_segmentation_dzb">
        <item>-90</item>
        <item>-87</item>
        <item>-85</item>
        <item>-83</item>
        <item>-80</item>
        <item>-77</item>
        <item>-75</item>
        <item>-73</item>
        <item>-70</item>
        <item>-67</item>
        <item>-65</item>
        <item>-63</item>
        <item>-60</item>
        <item>-57</item>
        <item>-55</item>
        <item>-53</item>
        <item>-50</item>
    </string-array>
    <string name="setPauseForSegment">Set pause for new Segment in milliseconds</string>
    <string name="setMinimumSegmentDuration">Set min. length of Segment in milliseconds</string>
    <string name="setNuanceAppId">Set Nuance App ID</string>
    <string name="setNuanceKey">Set Nuance Key</string>
    <string name="setGoogleId">Set Google ID</string>
    <string name="noNetwork">No Network available. Transcription disabled for this Record.</string>
    <string name="configErrorTrancript">Configuration for chosen Transcript Service is missing.</string>
</resources>
